# promptOS

./: .gitignore  .mcp.json  README.md  index.html  package-lock.json  package.json
docs/: PRD.md  architecture.md  backend.md  features.md  operations.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: keychain.rs  keystroke_monitor.rs  lib.rs  main.rs  text_field_detector.rs  text_injector.rs
src/components/: OverlayView.tsx  SettingsView.tsx
src/hooks/: useSupabase.ts
src/lib/: commands.ts  gemini.ts  supabase.ts
src/types/: index.ts
